--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,10 @@ env:
     - HARNESS_OPTIONS=j9
 install:
   - cpanm -n --installdeps .
+before_script:
+  - coverage-setup
+script:
+  - prove -lvr -j$(test-jobs) $(test-files)   # parallel testing
 sudo: false
 notifications:
   email: false
