update .travis.yml for "script"

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ env:
 install:
   - cpanm -n --installdeps .
 script:
-  - prove -lvr -j$(test-jobs) $(test-files)
+  - prove -lvr
 sudo: false
 notifications:
   email: false
