--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,16 @@ perl:
   - "5.14"
   - "5.12"
   - "5.10"
+addons:
+  mysql: "5.6"
+before_script:
+  - mysql -e 'create database myapp_test default character set utf8 default collate utf8_general_ci;'
 env:
   global:
-    - HARNESS_OPTIONS=j9
+    - "HARNESS_OPTIONS=j1 TEST_ONLINE_mysql=mysql://root@/myapp_test"
 install:
-  - cpanm -n --installdeps .
+  - "cpanm -n Test::Pod Test::Pod::Coverage"
+  - "cpanm -n --installdeps ."
 script: prove -lvr t
 sudo: false
 notifications:
