fix command to install "DBD::mysql and Mojo::mysql"

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ env:
   global:
     - "HARNESS_OPTIONS=j1 TEST_ONLINE_mysql=mysql://root@/myapp_test"
 install:
+  - "cpanm DBD::mysql Mojo::mysql"
   - "cpanm -n Test::Pod Test::Pod::Coverage"
-  - "cpanm -n DBD::mysql Mojo::mysql"
   - "cpanm -n --installdeps ."
 script: prove -lvr t
 sudo: false
