--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,27 @@ perl:
   - "5.10"
 addons:
   mysql: "5.6"
+  apt:
+    packages:
+      - libaio-dev
+      - libnuma-dev
+      - libjemalloc-dev
+      - libmysqlclient-dev
+      - libmysqld-dev
+      - libwrap0-dev
+      - libstdc++5
+before_install:
+ - sudo apt-get update -qq
+ - sudo apt-get install -qq libmysqlclient-dev libmysqld-dev libwrap0-dev libaio-dev
+ - perlbrew install-cpanm -f
 before_script:
   - mysql -e 'create database myapp_test default character set utf8 default collate utf8_general_ci;'
 env:
   global:
     - "HARNESS_OPTIONS=j1 TEST_ONLINE_mysql=mysql://root@/myapp_test"
 install:
-  - "cpanm DBI DBD::mysql Mojo::mysql"
+  - "cpanm --quiet DBI DBD::mysql"
+  - "cpanm --quiet Mojo::mysql"
   - "cpanm -n Test::Pod Test::Pod::Coverage"
   - "cpanm -n --installdeps ."
 script: prove -lvr t
