--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,6 @@ perl:
   - "5.12"
   - "5.10"
 addons:
-  mysql: "5.6"
   apt:
     packages:
       - libaio-dev
@@ -21,18 +20,16 @@ addons:
       - libwrap0-dev
       - libstdc++5
 before_install:
- - sudo apt-get update -qq
- - sudo apt-get install -qq libmysqlclient-dev libmysqld-dev libwrap0-dev libaio-dev
- - perlbrew install-cpanm -f
-before_script:
-  - mysql -e 'create database myapp_test default character set utf8 default collate utf8_general_ci;'
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq libmysqlclient-dev libmysqld-dev libwrap0-dev libaio-dev
+  - perlbrew install-cpanm -f
+  - mysql -e 'CREATE DATABASE IF NOT EXISTS myapp_test;'
+  - mysql -e "grant all privileges on myapp_test.* to 'travis'@'localhost' identified by 's3kr1t';"
 env:
   global:
-    - "HARNESS_OPTIONS=j1 TEST_ONLINE_mysql=mysql://root@/myapp_test"
+    - "HARNESS_OPTIONS=j1 TEST_ONLINE_mysql=mysql://travis:s3kr1t@localhost/myapp_test"
 install:
-  - "cpanm --quiet DBI DBD::mysql"
-  - "cpanm --quiet Mojo::mysql"
-  - "cpanm -n Test::Pod Test::Pod::Coverage"
+  - "cpanm --quiet DBI Mojo::mysql Test::Pod Test::Pod::Coverage"
   - "cpanm -n --installdeps ."
 script: prove -lvr t
 sudo: false
