--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,8 @@ env:
   global:
     - "HARNESS_OPTIONS=j1 TEST_ONLINE_mysql=mysql://travis:s3kr1t@localhost/myapp_test"
 install:
-  - "cpanm --quiet DBI Mojo::mysql Test::Pod Test::Pod::Coverage"
-  - "cpanm -n --installdeps ."
+  - "cpanm -n Test::Pod Test::Pod::Coverage"
+  - "cpanm -n Scalar::Util String::Random Mojo::mysql Mojo::SQLite CellBIS::Random CellBIS::SQL::Abstract"
 script: prove -lvr t
 sudo: false
 notifications:
