--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: perl
+sudo: false
 perl:
   - "5.26"
   - "5.24"
@@ -29,9 +30,8 @@ before_install:
 env:
   - "HARNESS_OPTIONS=j9 TEST_ONLINE_mysql=mysql://travis:s3kr1t@localhost/myapp_test"
 install:
-  - "cpanm -n Test::Pod Test::Pod::Coverage"
-  - "cpanm Scalar::Util String::Random DBI DBD::mysql Mojo::mysql Mojo::SQLite CellBIS::Random CellBIS::SQL::Abstract"
+  - cpan-install --deps
+  - cpan-install --coverage
 script: prove -lvr t
-sudo: false
 notifications:
   email: false
