--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ perl:
   - "5.10"
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq libmysqlclient-dev libmysqld-dev libwrap0-dev libaio-dev
+  - sudo apt-get install -qq mariadb-server mariadb-client libmariadbclient-dev
   - sudo apt-get install -qq libdbd-mysql-perl
   - mysql -e 'CREATE DATABASE IF NOT EXISTS myapp_test;'
   - mysql -e "grant all privileges on myapp_test.* to 'travis'@'localhost' identified by 's3kr1t';"
@@ -25,6 +25,7 @@ before_install:
 install:
   - sudo cp /etc/mysql/my.cnf /usr/share/mysql/my-default.cnf
   - perlbrew install-cpanm -f
+  - cpanm -n DBI DBD::mysql Mojo::mysql
   - cpan-install --deps
   - cpan-install --coverage
 env:
