Update .travis.yml to enable "mysql" backend testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ env:
 install:
   - "cpanm -n Test::Pod Test::Pod::Coverage"
   - cpanm -n Devel::CheckLib DBI DBD::mysql Mojo::mysql
-  - cpanm --installdeps .
+  - cpanm -n --installdeps .
 script:
   - prove -lvr t
 notifications:
