--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ services:
   - postgresql
 before_script:
   - psql -U postgres -c 'create database msa_test'
-  - mysql -e 'create database msa_test default character set utf8 default collate utf8_general_ci;'
+  - mysql -e 'create database msa_test;'
 env:
   global:
     - HARNESS_OPTIONS=j9
