--- a/.travis.yml
+++ b/.travis.yml
@@ -1,39 +1,74 @@
 language: perl
 sudo: required
+
+perl:
+  - "5.30"
+  - "5.28"
+  - "5.26"
+  - "5.24"
+  - "5.22"
+
+before_script:
+  - psql -U postgres -c 'create database msa_test'
+  - sudo mysql -e "SET Password=PASSWORD('travis')"
+  - sudo mysql -e 'create database msa_test;'
+
 matrix:
   include:
-    - perl: "5.30"
-    - perl: "5.28"
-    - perl: "5.26"
-    - perl: "5.24"
-    - perl: "5.22"
     - perl: "5.20"
       dist: trusty
+      before_script:
+        - mysql -e 'create database msa_test;'
+      env:
+        - TEST_ONLINE=mysql://root@/msa_test
+        - TEST_ONLINE_pg=postgresql://postgres@/msa_test
     - perl: "5.18"
       dist: trusty
+      before_script:
+        - mysql -e 'create database msa_test;'
+      env:
+        - TEST_ONLINE=mysql://root@/msa_test
+        - TEST_ONLINE_pg=postgresql://postgres@/msa_test
     - perl: "5.16"
       dist: trusty
+      before_script:
+        - mysql -e 'create database msa_test;'
+      env:
+        - TEST_ONLINE=mysql://root@/msa_test
+        - TEST_ONLINE_pg=postgresql://postgres@/msa_test
     - perl: "5.14"
       dist: trusty
+      before_script:
+        - mysql -e 'create database msa_test;'
+      env:
+        - TEST_ONLINE=mysql://root@/msa_test
+        - TEST_ONLINE_pg=postgresql://postgres@/msa_test
     - perl: "5.12"
       dist: trusty
+      before_script:
+        - mysql -e 'create database msa_test;'
+      env:
+        - TEST_ONLINE=mysql://root@/msa_test
+        - TEST_ONLINE_pg=postgresql://postgres@/msa_test
     - perl: "5.10"
       dist: trusty
+      before_script:
+        - mysql -e 'create database msa_test;'
+      env:
+        - TEST_ONLINE=mysql://root@/msa_test
+        - TEST_ONLINE_pg=postgresql://postgres@/msa_test
+
+env:
+  global:
+    - HARNESS_OPTIONS=j9
+    - LC_ALL=C
+    - TEST_ONLINE=mysql://root:travis@/msa_test
+    - TEST_ONLINE_pg=postgresql://postgres@/msa_test
 addons:
   mariadb: 10.4
   postgresql: 9.6
 services:
   - postgresql
-before_script:
-  - psql -U postgres -c 'create database msa_test'
-  - sudo mysql -e "SET Password=PASSWORD('travis')"
-  - sudo mysql -e 'create database msa_test;'
-env:
-  global:
-    - HARNESS_OPTIONS=j9
-    - LC_ALL=C
-    - TEST_ONLINE_mysql=mysql://root:travis@/msa_test
-    - TEST_ONLINE_pg=postgresql://postgres@/msa_test
 install:
   - "cpanm -n Test::Pod Test::Pod::Coverage"
   - cpanm -n Devel::CheckLib DBI DBD::mysql Mojo::mysql Mojo::Pg
