--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,6 @@ perl:
   - "5.24"
   - "5.22"
 
-before_script:
-  - psql -U postgres -c 'create database msa_test'
-  - sudo mysql -e "SET Password=PASSWORD('travis')"
-  - sudo mysql -e 'create database msa_test;'
-
 matrix:
   include:
     - perl: "5.20"
@@ -63,16 +58,26 @@ env:
     - LC_ALL=C
     - TEST_ONLINE_mariadb=mariadb://root:travis@/msa_test
     - TEST_ONLINE_pg=postgresql://postgres@/msa_test
+
+before_script:
+  - psql -U postgres -c 'create database msa_test'
+  - sudo mysql -e "SET Password=PASSWORD('travis')"
+  - sudo mysql -e 'create database msa_test;'
+
 addons:
   mariadb: 10.4
   postgresql: 9.6
+
 services:
   - postgresql
+
 install:
-  - "cpanm -n Test::Pod Test::Pod::Coverage"
+  - cpanm -n Test::Pod Test::Pod::Coverage
   - cpanm -n Devel::CheckLib DBI DBD::MariaDB Mojo::mysql Mojo::Pg
   - cpanm -n --installdeps .
+
 script:
   - prove -lvr t
+
 notifications:
   email: false
